# graph_project

./: .gitignore  CMakeLists.txt  Put the graph here.txt.lnk  README.md  TUTAJ UMIEŚĆ GRAF.lnk  Tutaj umieść graf.txt.lnk  draw_graph.cpp  draw_graph.h  graph.cpp  graph.h  graph_logic.cpp  graph_logic.h  main.cpp
